# FN6

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compare-dists.py  pyproject.toml
.github/workflows/: release.yaml
fn6/: find_neighbour_to_tree.py
python_scripts/: compare_dists.py
src/: lib.rs  main.rs  py_lib.rs  sample.rs
tests/cases/dummy/: 1_2.multi.fasta  adding-samples.txt  all-distances-cutoff1.txt  all-distances.txt  qc-fail.fasta
tests/cases/dummy/fn5_saves/: uuid3.fn5  uuid4.fn5  uuid5.fn5
tests/cases/dummy/fn6_saves/: 1.fn6  2.fn6  3.fn6  4.fn6  5.fn6
