[package]
name = "fn6"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
flate2 = "1.1.9"
rayon = "1.11.0"
rkyv = { version = "0.8.15", features = ["bytecheck"] }
sha256 = "1.6.0"

[dev-dependencies]
pretty_assertions = "1.4.0"

[profile.release]
opt-level = 3
lto = true
debug-assertions = true
codegen-units = 1
panic = "abort"
strip = false
debug = false
