[package]
name = "fn6"
version = "0.1.0"
edition = "2024"
description = "Fast, efficient and scalable SNP distance calculation from disk."
license-file = "LICENSE"
license = "University of Oxford, see license file for details."

[lib]
name = "fn6"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
flate2 = "1.1.9"
rayon = "1.11.0"
rkyv = { version = "0.8.15", features = ["bytecheck"] }
sha256 = "1.6.0"

pyo3 = "0.28.3"

[dev-dependencies]
pretty_assertions = "1.4.0"

[profile.release]
opt-level = 3
lto = true
debug-assertions = true
codegen-units = 1
panic = "abort"
strip = false
debug = false


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
