[package]
name = "fn6"
version = "0.2.0"
edition = "2024"
description = "Fast, efficient and scalable SNP distance calculation from disk."
license-file = "LICENSE"
readme="README.md"

[lib]
name = "fn6"
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
flate2 = "1.1.9"
rayon = "1.11.0"
rkyv = { version = "0.8.15", features = ["bytecheck"] }
sha256 = "1.6.0"
pyo3 = { version = "0.29", features = ["abi3-py310", "abi3-py311", "abi3-py312", "abi3-py313", "abi3-py314"] }

[dev-dependencies]
pretty_assertions = "1.4.0"

[profile.release]
opt-level = 3
lto = true
debug-assertions = true
codegen-units = 1
panic = "abort"
strip = false
debug = false


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
